--- a/PowerSupplyBoard.ioc
+++ b/PowerSupplyBoard.ioc
@@ -2,19 +2,41 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+CAN.BS1=CAN_BS1_13TQ
+CAN.BS2=CAN_BS2_4TQ
+CAN.CalculateBaudRate=1000000
+CAN.CalculateTimeBit=1000
+CAN.CalculateTimeQuantum=55.55555555555556
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS2,BS1,Prescaler
+CAN.Prescaler=2
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F303K8T6
 Mcu.Family=STM32F3
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP0=CAN
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
+Mcu.IPNb=6
 Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
-Mcu.Pin0=VP_SYS_VS_Systick
-Mcu.PinsNb=1
+Mcu.Pin0=PF0 / OSC_IN
+Mcu.Pin1=PF1 / OSC_OUT
+Mcu.Pin10=PB5
+Mcu.Pin11=PB7
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin2=PA0
+Mcu.Pin3=PA9
+Mcu.Pin4=PA10
+Mcu.Pin5=PA11
+Mcu.Pin6=PA12
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB4
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -31,6 +53,40 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=EMERGENCY
+PA0.Locked=true
+PA0.Signal=GPIO_Output
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=CAN_STBY
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA11.Mode=CAN_Activate
+PA11.Signal=CAN_RX
+PA12.Mode=CAN_Activate
+PA12.Signal=CAN_TX
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
+PA9.Locked=true
+PA9.Signal=S_TIM2_CH3
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=LED_B
+PB4.Locked=true
+PB4.Signal=S_TIM3_CH1
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=LED_G
+PB5.Locked=true
+PB5.Signal=S_TIM3_CH2
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=LED_R
+PB7.Locked=true
+PB7.Signal=S_TIM3_CH4
+PF0\ /\ OSC_IN.Mode=HSE-External-Oscillator
+PF0\ /\ OSC_IN.Signal=RCC_OSC_IN
+PF1\ /\ OSC_OUT.Mode=HSE-External-Oscillator
+PF1\ /\ OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -63,27 +119,55 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
-RCC.AHBFreq_Value=8000000
-RCC.APB1Freq_Value=8000000
-RCC.APB2Freq_Value=8000000
-RCC.CortexFreq_Value=8000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+RCC.ADC12outputFreq_Value=72000000
+RCC.AHBFreq_Value=72000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
+RCC.APB2Freq_Value=72000000
+RCC.APB2TimFreq_Value=72000000
+RCC.CortexFreq_Value=72000000
+RCC.FCLKCortexFreq_Value=72000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=72000000
 RCC.HSEPLLFreq_Value=8000000
 RCC.HSE_VALUE=8000000
 RCC.HSIPLLFreq_Value=4000000
 RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CortexFreq_Value,FamilyName,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,LSI_VALUE,PLLCLKFreq_Value,PLLMCOFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIM2Freq_Value,USART1Freq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADC12outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,USART1Freq_Value,VCOOutput2Freq_Value
 RCC.LSI_VALUE=40000
-RCC.PLLCLKFreq_Value=8000000
-RCC.PLLMCOFreq_Value=8000000
+RCC.MCOFreq_Value=72000000
+RCC.PLLCLKFreq_Value=72000000
+RCC.PLLMCOFreq_Value=72000000
+RCC.PLLMUL=RCC_PLL_MUL9
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=40000
 RCC.RTCHSEDivFreq_Value=250000
-RCC.SYSCLKFreq_VALUE=8000000
-RCC.TIM2Freq_Value=8000000
-RCC.USART1Freq_Value=8000000
-RCC.VCOOutput2Freq_Value=4000000
+RCC.SYSCLKFreq_VALUE=72000000
+RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TIM1Freq_Value=72000000
+RCC.TIM2Freq_Value=72000000
+RCC.USART1Freq_Value=36000000
+RCC.VCOOutput2Freq_Value=8000000
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.IPParameters=Channel-PWM Generation3 CH3,Prescaler,Period
+TIM2.Period=999
+TIM2.Prescaler=71
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,Prescaler
+TIM3.Prescaler=71
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
